--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,14 @@ ENV/
 # Local metrics output
 metrics/
 
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
+coverage.xml
+.mypy_cache/
+.ruff_cache/
+
 # OS
 .DS_Store
 Thumbs.db
