Add integration tests, Makefile, and multi-arch Docker support
Integration Tests:
- Add 8 comprehensive integration tests that validate Docker container behavior
- Test metrics generation, configuration, signal handling, atomic writes
- Verify container runs as non-root user (mluser)
- All integration tests pass (17s runtime)

Makefile:
- Add convenient development commands (make help, make ci, make test, etc.)
- Simplifies common tasks: linting, type checking, testing, Docker builds
- make ci runs all checks exactly as GitHub Actions does

CI/CD Improvements:
- Consolidate CI/CD into single workflow (removed separate release.yml)
- Build and test Docker image before pushing
- Push exact tested image (no rebuild) for tagged releases
- Add multi-architecture support (linux/amd64, linux/arm64)
- Support for Apple Silicon M-series Macs
- Tests run on both pushes and tags

Documentation:
- Update README with integration test instructions
- Add Makefile usage examples
- Document multi-arch support
- Update CLAUDE.md with comprehensive testing workflow

All tests pass:
- ✓ Unit tests: 25/25 (100% coverage)
- ✓ Integration tests: 8/8
- ✓ Linting: 0 errors
- ✓ Type checking: 0 errors

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,9 @@ addopts = [
 source = ["."]
 omit = ["test_*.py", ".venv/*", "venv/*"]
 
+[tool.coverage.paths]
+source = ["."]
+
 [tool.coverage.report]
 exclude_lines = [
     "pragma: no cover",
